made numeralise runnable

--- a/roman-numerals/Cargo.toml
+++ b/roman-numerals/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "roman-numerals"
+name = "roman_numerals"
 version = "0.1.0"
 authors = ["Mark Robson <mark.o.robson@gmail.com>"]
 edition = "2018"
